trunk/Archive2/5d/b9dc4cff26dcb5/output
main.cpp:5:12: error: no viable conversion from 'std::ifstream' (aka 'basic_ifstream<char>') to 'bool'
    return std::ifstream{};
           ^~~~~~~~~~~~~~~
1 error generated.
