trunk/Archive2/5d/b9dc4cff26dcb5/main.cpp
#include <fstream>

bool f()
{
    return std::ifstream{};
}
